// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NbaCard component accpets onClick 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`NbaCard component non clickable renders correctly 1`] = `
<div>
  <div
    class="NBACard-root-40 ColorPair-root-45 ColorPair-blue900-59"
    type="button"
  >
    <h4
      class="MuiTypography-root NBACard-title-42 Typography-root-71 MuiTypography-h4"
      data-testid="typography"
    >
      H4 Heading
    </h4>
    <div
      class="NBACard-body-43"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum nisi at turpis fringilla, non malesuada mi porta. Aliquam ut eros in libero rutrum ullamcorper.
      </div>
    </div>
  </div>
</div>
`;

exports[`NbaCard component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root NBACard-root-1 NBACard-clickable-2 ColorPair-root-6 ColorPair-blue900-20"
    tabindex="0"
    type="button"
  >
    <h4
      class="MuiTypography-root NBACard-title-3 Typography-root-32 MuiTypography-h4"
      data-testid="typography"
    >
      H4 Heading
    </h4>
    <div
      class="NBACard-body-4"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum nisi at turpis fringilla, non malesuada mi porta. Aliquam ut eros in libero rutrum ullamcorper.
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`NbaCard component renders with footer 1`] = `
<div>
  <button
    class="MuiButtonBase-root NBACard-root-79 NBACard-clickable-80 ColorPair-root-84 ColorPair-blue900-98"
    tabindex="0"
    type="button"
  >
    <h4
      class="MuiTypography-root NBACard-title-81 Typography-root-110 MuiTypography-h4"
      data-testid="typography"
    >
      H4 Heading
    </h4>
    <div
      class="NBACard-body-82"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum nisi at turpis fringilla, non malesuada mi porta. Aliquam ut eros in libero rutrum ullamcorper.
      </div>
    </div>
    <div
      class="NBACard-footer-83"
    >
      <div>
        footer
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
